First commit for Unit Test registration

--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -1,6 +1,6 @@
 <HTML>
  <BODY bgcolor=cyan>
- <H1>Use Registration Form</H1><br>
+ <H1>Use Registration Form to regiter</H1><br>
  
  <form action="./register" method="post">
  <table>
